# transcribe_demo

./: .gitignore  BACKEND_PROTOCOL_IMPLEMENTATION.md  CLAUDE.md  DESIGN.md  FIX_VALIDATION.md  GEMINI.md  README.md  REALTIME_CALIBRATION.md  REFACTORING.md  REFACTORING_HISTORY.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  SESSIONS.md  SESSION_LOGS.md  SESSION_REPLAY.md  SITEMAP.md  TODO.md  TRANSCRIPTION_ANALYSIS.md  WEBAPP.md  balanced_transcription.txt  full_transcription.txt  full_transcription_complete.txt  pyproject.toml  pyrightconfig.json  run-checks.sh  transcription_output.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
ci/: pyproject.toml
src/transcribe_demo/: __init__.py  _sounddevice.py  async_utils.py  audio_capture.py  backend_config.py  backend_factory.py  backend_protocol.py  chunk_collector.py  cli.py  file_audio_source.py  flags.py  main.py  realtime_backend.py  session_logger.py  session_replay.py  session_replay_cli.py  sound_device.py  transcribe.py  transcript_diff.py  whisper_backend.py
tests/: __init__.py  conftest.py  test_audio_capture.py  test_backend_protocol.py  test_backend_time_limits.py  test_file_audio_source.py  test_helpers.py  test_main_utils.py  test_realtime_backend_clipping.py  test_realtime_backend_integration.py  test_realtime_backend_utils.py  test_session_logger.py  test_session_replay.py  test_sound_device.py  test_vad.py  test_whisper_backend_integration.py  test_whisper_backend_utils.py  test_whisper_imports.py  test_whisper_partial_forced_update.py
webapp/: README.md  app.py  run-webapp.sh
webapp/static/: audio-processor.js
webapp/templates/: index.html
