[project]
name = "transcribe-demo"
version = "0.1.0"
description = "Real-time transcription with Whisper using sounddevice and torch."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py>=2.3.1",
    "numpy",
    "openai-whisper",
    "sounddevice",
    "torch",
    "webrtcvad>=2.0.10",
    "websockets",
]

[project.scripts]
transcribe-demo = "transcribe_demo.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning"
]
markers = [
    "integration: marks tests that exercise higher-level audio flows",
]
