[project]
name = "transcribe-demo"
version = "0.1.0"
description = "Real-time transcription with Whisper using sounddevice and torch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "numpy",
    "openai-whisper",
    "setuptools>=80.9.0",
    "sounddevice",
    "soundfile>=0.12.0",
    "torch",
    "webrtcvad>=2.0.10",
    "websockets",
]

[project.scripts]
transcribe-demo = "transcribe_demo.cli:cli_main"
transcribe-session = "transcribe_demo.session_replay_cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.5.5",
    "pyright>=1.1.370",
]
webapp = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.11.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning"
]
markers = [
    "integration: marks tests that exercise higher-level audio flows",
]

[tool.ruff]
line-length = 120
