[project]
name = "transcribe-demo"
version = "0.1.0"
description = "Real-time transcription with Whisper using sounddevice and torch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "openai-whisper",
    "setuptools>=80.9.0",
    "simple-parsing>=0.1.6",
    "sounddevice",
    "soundfile>=0.12.0",
    "torch",
    "webrtcvad>=2.0.10",
    "websockets",
]

[project.scripts]
transcribe-demo = "transcribe_demo.cli:cli_main"
transcribe-session = "transcribe_demo.session_replay_cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.5.5",
    "pyright>=1.1.370",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning"
]
markers = [
    "integration: marks tests that exercise higher-level audio flows",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (includes F401 unused imports)
    "W",   # pycodestyle warnings
]

# E501 is handled by formatter, but we want to enforce it in linting too
extend-select = ["E501"]  # Line too long

[tool.ruff.format]
line-ending = "auto"
